# SOP

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Dockerfile  LICENSE.txt  README.md  SetupSeleniumTests.sh  entrypoint.sh  requirements.txt  requirements_deploy.txt  requirements_flake.txt  requirements_pyod_algorithms.txt  requirements_test.txt  setup_selenium_testing.sh  tox.ini
backend_library/src/: ee_result_path.csv.error  error.csv.error  pyproject.toml
backend_library/src/backend/: AnnotatedDataset.py  DataIO.py  DataIOInputException.py  DataInfo.py  DatasetHelper.py  DatasetInfo.py  JsonSerializable.py
backend_library/src/backend/metric/: ExecutionElementMetricHelper.py  Metric.py  MetricDataPointsAreOutliers.py  MetricSubspaceOutlierAmount.py
backend_library/src/backend/scheduler/: DebugScheduler.py  DebugScheduler2.py  Schedulable.py  Scheduler.py  ThreadedScheduler.py  UserRoundRobinScheduler.py
backend_library/src/backend/task/: Task.py  TaskErrorMessages.py  TaskHelper.py  TaskState.py
backend_library/src/backend/task/cleaning/: CategoricalColumnRemover.py  CategoricalDataHandler.py  DatasetCleaning.py  DatasetCleaningStep.py  FeatureScaler.py  Imputation.py  (+6 more)
backend_library/src/main/: pyproject.toml
backend_library/src/main/backend/: DataIO.py
backend_library/src/test/: DatasetsForTesting.py  DebugScheduler2.py  TestHelper.py  UrrsWoWorkers.py
backend_library/src/test/algorithms/: DebugAlgorithm.py  knn.py
backend_library/src/test/backend/: DatasetsForTesting.py
backend_library/src/test/datasets/: canada_climate_uncleaned.csv  invalid_csv.csv
(+351 files in other folders)
